Remove Firebase login

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "title": "LALA 4 Admin",
   "description": "LALA 4 Admin",
   "author": {
-    "name": "101 Grados Marketing Relacional",
-    "url": "https://101grados.com"
+    "name": "Suldery Arellano"
   },
   "private": true,
   "dependencies": {
