--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.1",
+    "slugify": "^1.6.6",
     "stylis": "4.1.1",
     "stylis-plugin-rtl": "2.1.1",
     "swiper": "8.2.2",
