--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-i18next": "11.17.0",
     "react-image-pan-zoom-rotate": "^1.6.0",
     "react-medium-image-zoom": "^5.1.5",
-    "react-quill": "2.0.0-beta.4",
+    "react-quill": "2.0.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
